--- a/Lab01_EFCore/Lab01_EFCore.csproj
+++ b/Lab01_EFCore/Lab01_EFCore.csproj
@@ -15,6 +15,9 @@
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration" Version="5.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Core" Version="5.0.2" />
     <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="5.0.2" />
+    <PackageReference Include="SweetAlert" Version="1.0.0" />
+    <PackageReference Include="SweetAlert.Base" Version="1.1.3" />
+    <PackageReference Include="SweetAlert2" Version="1.0.1" />
   </ItemGroup>
 
 </Project>
